--- a/force-app/main/default/classes/StringUtils.cls
+++ b/force-app/main/default/classes/StringUtils.cls
@@ -676,32 +676,32 @@ global class StringUtils {
      * @param str  the String to chomp a newline from, may be null
      * @return String without newline, {@code null} if null String input
      */
-//    global static String chomp(final String str) {
-//        if (isEmpty(str)) {
-//            return str;
-//        }
-//
-//        if (str.length() == 1) {
-//            final char ch = str.charAt(0);
-//            if (ch == CharUtils.CR || ch == CharUtils.LF) {
-//                return EMPTY;
-//            }
-//            return str;
-//        }
-//
-//        Integer lastIdx = str.length() - 1;
-//        final char last = str.charAt(lastIdx);
-//
-//        if (last == CharUtils.LF) {
-//            if (str.charAt(lastIdx - 1) == CharUtils.CR) {
-//                lastIdx--;
-//            }
-//        } else if (last != CharUtils.CR) {
-//            lastIdx++;
-//        }
-//        return str.substring(0, lastIdx);
-//    }
-//
+    global static String chomp(final String str) {
+        if (isEmpty(str)) {
+            return str;
+        }
+
+        if (str.length() == 1) {
+            final Integer ch = str.charAt(0);
+            if (ch == CharUtils.CR || ch == CharUtils.LF) {
+                return EMPTY;
+            }
+            return str;
+        }
+
+        Integer lastIdx = str.length() - 1;
+        final Integer last = str.charAt(lastIdx);
+
+        if (last == CharUtils.LF) {
+            if (str.charAt(lastIdx - 1) == CharUtils.CR) {
+                lastIdx--;
+            }
+        } else if (last != CharUtils.CR) {
+            lastIdx++;
+        }
+        return str.substring(0, lastIdx);
+    }
+
     /**
      * <p>Removes {@code separator} from the end of
      * {@code str} if it's there, otherwise leave it alone.</p>
