--- a/force-app/main/default/classes/CharUtilsTest.cls
+++ b/force-app/main/default/classes/CharUtilsTest.cls
@@ -9,4 +9,10 @@ private class CharUtilsTest {
     static void toCharString01() {
         System.assertEquals('A'.charAt(0), CharUtils.toChar('A'));
     }
+
+    @isTest(SeeAllData=false)
+    static void toCharStringDefault01() {
+        System.assertEquals('A'.charAt(0), CharUtils.toChar('A', 'B'.charAt(0)));
+        System.assertEquals('B'.charAt(0), CharUtils.toChar('', 'B'.charAt(0)));
+    }
 }
