--- a/force-app/main/default/classes/CharUtilsTest.cls
+++ b/force-app/main/default/classes/CharUtilsTest.cls
@@ -8,12 +8,27 @@ private class CharUtilsTest {
     @isTest(SeeAllData=false)
     static void toCharString01() {
         System.assertEquals('A'.charAt(0), CharUtils.toChar('A'));
+        System.assertEquals('B'.charAt(0), CharUtils.toChar('BA'));
+        try {
+            CharUtils.toChar(null);
+            System.assert(false, 'ここに来ちゃダメ');
+        } catch (IllegalArgumentException ex) {
+            System.assert(true);
+        }
+        try {
+            CharUtils.toChar('');
+            System.assert(false, 'ここに来ちゃダメ');
+        } catch (IllegalArgumentException ex) {
+            System.assert(true);
+        }
     }
 
     @isTest(SeeAllData=false)
     static void toCharStringDefault01() {
-        System.assertEquals('A'.charAt(0), CharUtils.toChar('A', 'B'.charAt(0)));
-        System.assertEquals('B'.charAt(0), CharUtils.toChar('', 'B'.charAt(0)));
+        System.assertEquals('X'.charAt(0), CharUtils.toChar(null, 'X'.charAt(0)));
+        System.assertEquals('X'.charAt(0), CharUtils.toChar('', 'X'.charAt(0)));
+        System.assertEquals('A'.charAt(0), CharUtils.toChar('', 'A'.charAt(0)));
+        System.assertEquals('B'.charAt(0), CharUtils.toChar('', 'BA'.charAt(0)));
     }
 
     @isTest(SeeAllData=false)
@@ -26,4 +41,11 @@ private class CharUtilsTest {
             System.assert(true);
         }
     }
+
+    @isTest(SeeAllData=false)
+    static void toIntValueDefault01() {
+        System.assertEquals(3, CharUtils.toIntValue('3'.charat(0), -1));
+        System.assertEquals(-1, CharUtils.toIntValue('A'.charat(0), -1));
+    }
+
 }
